fixed broken css

--- a/base.css
+++ b/base.css
@@ -78,49 +78,37 @@ body {
     border-radius: 100%;
     height: 36px;
     width: 36px;
-    cursor: default;
-
     transition: 0.5s;
 
     &:first-of-type:hover {
       box-shadow: inset 0 0 0 2em var(--color-fg);
     }
-
-    &.theme-pretty-pink {
+    
+    &:not(:first-of-type) {
       visibility: hidden;
-
-      &:hover {
-        color: pink;
-        border-color: pink;
-        box-shadow: inset 0 0 0 2em pink;
-      }
     }
 
-
-    .theme-black-gold {
-      visibility: hidden;
-
-      &:hover {
-        color: gold;
-        border-color: gold;
-        box-shadow: inset 0 0 0 2em gold;
-      }
+    &.theme-pretty-pink:hover {
+      color: pink;
+      border-color: pink;
+      box-shadow: inset 0 0 0 2em pink;
     }
 
-
-    .theme-orange-black {
-      visibility: hidden;
-
-      &:hover {
-        color: #ff9000;
-        border-color: #ff9000;
-        box-shadow: inset 0 0 0 2em #ff9000;
-      }
+    &.theme-black-gold:hover {
+      color: gold;
+      border-color: gold;
+      box-shadow: inset 0 0 0 2em gold;
     }
-  }
 
-  & > span {
-    line-height: unset;
+    .theme-orange-black:hover {
+      color: #ff9000;
+      border-color: #ff9000;
+      box-shadow: inset 0 0 0 2em #ff9000;
+    }
+
+    & > span {
+      line-height: unset;
+    }
   }
 }
 
